test/expected/operator_before_command.out
shit: 2:1: error: Expected a command before operator, found '||'.
     2 |  || true
       |  ^~ here.
